--- a/.github/workflows/action.yml
+++ b/.github/workflows/action.yml
@@ -14,6 +14,7 @@ jobs:
         include:
           - username: ZJU_USERNAME
             password: ZJU_PASSWORD
+            cookie: COOKIE
             dingtalk_token: DINGTALK_TOKEN
             pushplus_token: PUSHPLUS_TOKEN
             serverchan_key: SERVERCHAN_KEY
@@ -24,6 +25,7 @@ jobs:
         with:
           username: ${{ secrets[matrix.username] }}
           password: ${{ secrets[matrix.password] }}
+          cookie: ${{ secrets[matrix.cookie] }}
           dingtalk_token: ${{ secrets[matrix.dingtalk_token] }}
           pushplus_token: ${{ secrets[matrix.pushplus_token] }}
           serverchan_key: ${{ secrets[matrix.serverchan_key] }}
